--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,6 +56,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .NavCart {
@@ -184,7 +185,7 @@ img {
 }
 
 .product-form {
-    width: 20%;
+    width: 100%;
 }
 
 #edit-button {
